# backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.py  database_test.py  main.py  manage.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-deploy.yml  docker-test.yml  pytest.yml  ruff.yml
apo/: __init__.py  api.py  forms.py  models.py  views.py
apo/helpers/: backtests.py  chargers.py  laf.py  lostreports.py
apo/static/css/: error.css
apo/templates/: 500.html  AlumniWeekend.html  AwardsWeGive.html  Bylaws and Const.html  BylawsandConst.html  ECOM.html  FreshmanScholarship.html  History.html  Home.html  Joining APO.html  JoiningAPO.html  Recruitment Events.html  RecruitmentEvents.html  backtest.html  base.html  home.html
assets/css/: styles.min.css
assets/fonts/: delete11
assets/img/: delete4
assets/js/: delete5  script.min.js
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
fastapi/: crud.py  db_models.py  dependencies.py  main.py
fastapi/routers/: chargers.py
flask/apo/: models.py
flask/apo/templates/: 404.html  base.html  home.html
flask/test-certs/: test.crt  test.key
old/: init.py
old/apo/: __init__.py  models.py
server/: app.py  config.py
server/database/: __init__.py  backtest.py  laf.py  loanertech.py  mongo.py  valkey.py
server/helpers/: auth.py  cache.py  db.py  description_search.py  responses.py  sanitize.py
server/models/: __init__.py  auth.py  backtest.py  common.py  laf.py  loanertech.py
server/routes/: auth.py  backtest.py  laf.py  loanertech.py
tests/: test_auth.py  test_cache.py  test_db.py  test_description_search.py  test_laf_description_search_integration.py  test_sanitize.py
